# coding-posture-engine

./: .gitignore  README.md  __init__.py  always-on-snippet.md  package.json  plugin.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: tests.yml
coding_posture_engine/: cli.py  engine.py  postures.json
eval/: README.md  run-skill-evals.sh
extensions/: coding-posture.ts
prompts/: posture-task.md
scripts/git-hooks/: pre-commit  pre-push
skills/coding-posture/: SKILL.md
tests/: test_engine.py
tests/skill-evals/coding-posture/evals/: evals.json
